style.css
/* Allow mouse to select code */
pre, pre > code {
    user-select: unset!important;
}

/* Hide the "登录复制" button */
main div.blog-content-box pre .hljs-button.active {
    display: none!important;
}

/* Code auto-expansion */
main div.blog-content-box pre.set-code-hide {
    height: unset!important;
}

main div.blog-content-box pre {
    max-height: unset!important;
}

.hide-preCode-box {
    display: none;
}

/* Remove the restriction of "关注博主即可阅读全文" */
#article_content {
    height: unset!important;
    overflow: unset!important;
}

div.hide-article-box {
    display: none;
}

